--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.support_lib_version = '27.1.1'
     repositories {
         google()
         jcenter()
